// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuestionPrompt > snapshots > renders multi-question first page correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [?] Framework: Select your framework                                                             │
│                                                                                                  │
│ ▸ React React framework                                                                          │
│   Vue Vue framework                                                                              │
│   Other Provide your own custom response                                                         │
│                                                                                                  │
│ ↑/↓ to select • Space to choose • Enter to next                                                  │
│                                                                                                  │
╰─────────────────────────────────────────────────────────────────────────────────────────────(1/2)╯"
`;

exports[`QuestionPrompt > snapshots > renders multi-select question correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [?] Features: Select all that apply                                                              │
│                                                                                                  │
│ ▸ [ ] TypeScript Type safety                                                                     │
│   [ ] ESLint Code linting                                                                        │
│   [ ] Prettier Code formatting                                                                   │
│   [ ] Other Provide your own custom response                                                     │
│                                                                                                  │
│ ↑/↓ to select • Space to toggle • Enter to submit                                                │
│                                                                                                  │
╰─────────────────────────────────────────────────────────────────────────────────────────────(1/1)╯"
`;

exports[`QuestionPrompt > snapshots > renders single question correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [?] Framework: Which framework do you prefer?                                                    │
│                                                                                                  │
│ ▸ React A JavaScript library for building UIs                                                    │
│   Vue The progressive JavaScript framework                                                       │
│   Angular Platform for building mobile & desktop apps                                            │
│   Other Provide your own custom response                                                         │
│                                                                                                  │
│ ↑/↓ to select • Space to choose • Enter to submit                                                │
│                                                                                                  │
╰─────────────────────────────────────────────────────────────────────────────────────────────(1/1)╯"
`;

exports[`QuestionPrompt > snapshots > renders two options correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [?] Confirm: Yes or no?                                                                          │
│                                                                                                  │
│ ▸ Yes Proceed                                                                                    │
│   No Cancel                                                                                      │
│   Other Provide your own custom response                                                         │
│                                                                                                  │
│ ↑/↓ to select • Space to choose • Enter to submit                                                │
│                                                                                                  │
╰─────────────────────────────────────────────────────────────────────────────────────────────(1/1)╯"
`;
